Implement exception_handler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 dbt = "^0.19.0"
+cx-Oracle = "^8.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
