Alter project default so it does not quote

--- a/test_project/dbt_project.yml
+++ b/test_project/dbt_project.yml
@@ -23,6 +23,10 @@ target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
     - "target"
     - "dbt_modules"
+quoting:
+  database: false
+  schema: false
+  identifier: false
 
 
 # Configuring models
