Configure quoting behaviour for seeds

--- a/test_project/dbt_project.yml
+++ b/test_project/dbt_project.yml
@@ -40,3 +40,6 @@ models:
       # Applies to all files under models/example/
       example:
           materialized: view
+
+seeds:
+  +quote_columns: false
