--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -22,4 +22,4 @@ jobs:
     - name: Run dbtspec tests
       run: |
         python -m pip install pytest
-        pytest
+        pytest specs/oracle.dbtspec
