--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -6,6 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    container: silverax/dbt-oracle-adapter:oracle-18.4.0-xe
 
     steps:
     - uses: actions/checkout@v2
@@ -22,4 +23,4 @@ jobs:
     - name: Run dbtspec tests
       run: |
         python -m pip install pytest
-        pytest specs/oracle.dbtspec
+        pytest ../specs/oracle.dbtspec
