--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -30,4 +30,4 @@ jobs:
     - name: Run dbtspec tests
       run: |
         python -m pip install pytest
-        pytest ../specs/oracle.dbtspec
+        pytest ./specs/oracle.dbtspec
