--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -30,10 +30,5 @@ jobs:
     - name: Run dbtspec tests
       run: |
         python -m pip install pytest
-        echo "$GITHUB_WORKSPACE"
-        ls
-        ls specs
-        ls /home/runner/work/dbt-oracle-adapter/dbt-oracle-adapter
-        ls $GITHUB_WORKSPACE
-
-        pytest
+        echo "Running test at $GITHUB_WORKSPACE/specs/oracle.dbtspec"
+        pytest $GITHUB_WORKSPACE/specs/oracle.dbtspec
