--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -37,11 +37,10 @@ jobs:
     - name: Install poetry
       run: |
         curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-        source $HOME/.poetry/env
   
     - name: Install package
       run: |
-        poetry install
+        $HOME/.poetry/bin/poetry install
 
     - name: Run dbtspec tests
       run: |
