--- a/.github/workflows/ci_pipeline.yaml
+++ b/.github/workflows/ci_pipeline.yaml
@@ -40,6 +40,7 @@ jobs:
   
     - name: Install package
       run: |
+        $HOME/.poetry/bin/poetry shell
         $HOME/.poetry/bin/poetry install
 
     - name: Run dbtspec tests
