--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,4 +47,4 @@ jobs:
 
     - name: Publish package
       run: |
-        $HOME/.poetry/bin/poetry publish --build --dry-run -u __token__ -p ${{ secrets.PYPI_API_TOKEN }}
+        $HOME/.poetry/bin/poetry publish --build -u __token__ -p ${{ secrets.PYPI_API_TOKEN }}
